--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@primer/octicons-react": "^19.20.0",
-    "next": "15.5.2",
+    "next": "^16.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
